# embedded-semantic

./: .gitignore  readme.md
client/: package-lock.json  package.json  vite.config.js
client/src/: App.svelte
client/src/components/: FilePreview.svelte  FileUpload.svelte  SearchBox.svelte  SearchResults.svelte  TextInput.svelte
client/src/lib/: store.js
rust-embedding/: Cargo.toml
rust-embedding/src/: lib.rs
rust-embedding/src/embeddings/: mod.rs  neural.rs  tf_idf.rs  traits.rs  word_vectors.rs
rust-embedding/src/text_processing/: chunking.rs  mod.rs  utils.rs
