[package]
name = "rust-embedding"
version = "0.1.0"
edition = "2021"

# Dynamic library to call from JavaScript
[lib]
crate-type = ["cdylib"]

[dependencies]

wasm-bindgen = "0.2" # Rust x JavaScript
serde = { version = "1.0", features = ["derive"] } 
serde-wasm-bindgen = "0.6" # convert data between Rust and JavaScript